# intro_pytest

./: README.md  pyproject.toml
basics/src/: inverse.py
basics/tests/: _toto_test.py  test_inverse.py
exercices/tests/: test_simple_functions.py
