[tool.poetry]
name = "intro-pytest"
version = "0.1.0"
description = ""
authors = ["formation-de <formationcp1902@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
numpy = "^1.26.4"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
